392449  callgrind not clearing the number of calls properly
393017  Add missing support for xsmaxcdp instruction, bug fixes for xsmincdp,
        lxssp, stxssp and stxvl instructions.
393023  callgrind_control risks using the wrong vgdb
393062  build-id ELF phdrs read causes "debuginfo reader: ensure_valid failed"
393099  posix_memalign() invalid write if alignment == 0
395709  PPC64 is missing support for the xvnegsp instruction
395682  Accept read-only PT_LOAD segments and .rodata by ld -z separate-code
        == 384727
396475  valgrind OS-X build: config.h not found (out-of-tree macOS builds)
396887  arch_prctl should return EINVAL on unknown option
397012  glibc ld.so uses arch_prctl on i386

n-i-bz  Fix missing workq_ops operations (macOS)
n-i-bz  fix bug in strspn replacement
n-i-bz  Add support for the Linux BLKFLSBUF ioctl
n-i-bz  Add support for the Linux BLKREPORTZONE and BLKRESETZONE ioctls
n-i-bz  Fix possible stack trashing by semctl syscall wrapping
n-i-bz  Add support for the Linux membarrier() system call

Release 3.13.0 (15 June 2017)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.13.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.

* ==================== CORE CHANGES ===================

* The translation cache size has been increased to keep up with the demands of
  large applications.  The maximum number of sectors has increased from 24 to
  48.  The default number of sectors has increased from 16 to 32 on all
  targets except Android, where the increase is from 6 to 12.

* The amount of memory that Valgrind can use has been increased from 64GB to
  128GB.  In particular this means your application can allocate up to about
  60GB when running on Memcheck.
